p2/custom-webapp/custom-webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-webapp-deployment
  labels:
    app: custom-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-webapp
  template:
    metadata:
      labels:
        app: custom-webapp
    spec:
      containers:
      - name: custom-webapp-deployment
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-volume
        configMap:
          name: app3.com
---
apiVersion: v1
kind: Service
metadata:
  name: custom-webapp-service
spec:
  type: NodePort
  selector:
    app: custom-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30005
